# csbiginteger-cpp

./: .gitignore  Makefile  README.md  WORKSPACE  get_libgmp.sh
.devcontainer/: Dockerfile  devcontainer.json
demo/: cs_demo.cpp  hand_demo.cpp  makefile
include/: BUILD.bazel
include/csbiginteger/: BUILD.bazel  BigInteger.h  HandBigInt.hpp  Helper.hpp  csBigIntegerLib.h  csBigIntegerLibClass.hpp  types.h
lib/: README.md
src/: BUILD.bazel  BigInteger.cpp  BigInteger.h  BigIntegerGMP.cpp  BigIntegerHand.cpp  BigIntegerMono.cpp  HandBigInt.hpp  Helper.hpp  csBigIntegerLib.cpp  csBigIntegerLib.h  csBigIntegerLib.hpp  csBigIntegerLibClass.hpp  types.h
src/dotnet/: BigIntegerLib.cs
tests/: .gitignore  BUILD.bazel  arithmetics.Test.hpp  csBigInteger-hard.Test.cpp  csBigInteger.Test.cpp  hard.Test.cpp  helper.Test.hpp  makefile  serialize.Test.hpp
tests/arithmetics-tests/: arithmetics.Test.cpp
tests/hard-tests/: hard.Test.cpp
tests/helper-tests/: helper.Test.cpp
tests/serialize-tests/: serialize.Test.cpp
