load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_import", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "libcsbiginteger_gmp",
    srcs = ["BigIntegerGMP.cpp"],
    linkstatic=True,
    deps = ["//include:csbiginteger"]
)

cc_library(
    name = "libcsbiginteger_hand",
    srcs = ["BigIntegerHand.cpp"],
    linkstatic=True,
    deps = ["//include:csbiginteger"]
)

cc_library(
    name = "libcsbiginteger_mono",
    srcs = ["BigIntegerMono.cpp"],
    linkstatic=True,
    deps = ["//include:csbiginteger"]
)